--- a/public/project/client/views/search/details.view.html
+++ b/public/project/client/views/search/details.view.html
@@ -63,6 +63,7 @@
                     <p><b>{{i.reviews}}</b></p>
 
                 </ul>
+                <div ng-show="model.noreviews" class="alert alert-danger site-color col-sm-6 col-sm-offset-3" role="alert">{{model.noreviews}}</div>
             </div>
         </div>
     </div>
