--- a/public/project/client/views/users/myreviews.view.html
+++ b/public/project/client/views/users/myreviews.view.html
@@ -17,74 +17,55 @@
 </div>
 <div class="container-fluid new-background">
 
-        <div class="col-sm-4 col-sm-offset-4">
-            <div class="center-block ">
-                <div class="form-header card elevation1">
-                    <h2 class="site-color">My Reviews</h2>
-                    <hr>
-                    <div class="table-responsive">
-                        <table class="table table-striped table-hover">
-                            <thead>
-                            <tr>
-                                <th>
-                                    Restaurant Name
-                                </th>
-                                <th>
-                                    Reviews
-                                </th>
-                                <th>
-                                    Action
-                                </th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr>
-                                <td>
-                                    &nbsp;
-                                </td>
-                                <td>
-                                    <input type="text" ng-model="model.title" class="form-control input-md"
-                                           placeholder="Review">
-                                </td>
-                                <td>
-                                    <div>
-                                        <a ng-click="model.updateReview(model.title)" role="button"
-                                           class="btn btn-success">
-                                            <span class="glyphicon glyphicon-ok favourites" aria-hidden="true"></span>
-                                        </a>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr ng-repeat="i in model.reviews">
-                                <td>
-                                    <a href="#/details/{{i.restaurantId}}"><b>{{i.restaurantName}}</b></a>
-                                </td>
-                                <td>
-                                    <b>{{i.reviews}}</b>
-                                </td>
-                                <td>
-                                    <div>
-                                        <a ng-click="model.deleteReview($index)" role="button" class="btn btn-danger"
-                                           aria-label="Add">
-                                            <span class="glyphicon glyphicon-remove favourites"
+    <div class="col-sm-8 col-sm-offset-2">
+        <div class="center-block ">
+            <div class="form-header card elevation1">
+                <h2 class="site-color">My Reviews</h2>
+                <hr>
+                <div class="table-responsive">
+                    <table class="table table-striped table-hover">
+                        <thead>
+                        <tr>
+                            <th>
+                                Restaurant Name
+                            </th>
+                            <th>
+                                Reviews
+                            </th>
+                            <th>
+                                Action
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="i in model.reviews">
+                            <td>
+                                <a href="#/details/{{i.restaurantId}}"><b>{{i.restaurantName}}</b></a>
+                            </td>
+                            <td>
+                                <b>{{i.reviews}}</b>
+                            </td>
+                            <td>
+                                <div>
+                                    <a ng-click="model.deleteReview($index)" role="button" class="btn btn-danger"
+                                       aria-label="Add">
+                                            <span class="glyphicon glyphicon-remove"
                                                   aria-hidden="true"></span>
-
-                                        </a>
-                                        <a ng-click="model.selectReview($index)" role="button" class="btn btn-info">
-                                            <span class="glyphicon glyphicon-pencil favourites"
+                                    </a>
+                                    <a ng-click="model.selectReview($index)" role="button" class="btn btn-info">
+                                            <span class="glyphicon glyphicon-pencil"
                                                   aria-hidden="true"></span>
-
-                                        </a>
-                                    </div>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
+                                    </a>
+                                </div>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
                 </div>
-
-
             </div>
 
+
         </div>
+
+    </div>
 </div>
