--- a/public/project/client/views/users/profile.view.html
+++ b/public/project/client/views/users/profile.view.html
@@ -26,7 +26,7 @@
                         <div class="form-group">
                             <label class="control-label col-sm-4" for="username">Username :</label>
                             <div class="col-sm-8">
-                                <input type="text" ng-model="model.user.username" id="username"
+                                <input readonly type="text" ng-model="model.user.username" id="username"
                                        class="form-control text-input center-block" placeholder="First Name">
                             </div>
                         </div>
