css fixed for profile pages

--- a/public/project/client/views/users/profile.view.html
+++ b/public/project/client/views/users/profile.view.html
@@ -14,7 +14,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid new-background">
+<div class="container-fluid ">
     <div class="row">
         <div class="col-sm-4 col-sm-offset-4">
             <div class="card register-card center-block">
