--- a/public/project/client/views/users/following.view.html
+++ b/public/project/client/views/users/following.view.html
@@ -1,4 +1,4 @@
-<div class="banner new-background elevation2">
+<div class="banner elevation2">
     <div class="container">
 
         <div class="row">
@@ -15,7 +15,7 @@
     </div>
 
 </div>
-<div class="container-fluid new-background">
+<div class="container-fluid ">
     <div class="row">
 
 
