--- a/public/project/client/views/users/myreviews.view.html
+++ b/public/project/client/views/users/myreviews.view.html
@@ -15,7 +15,7 @@
     </div>
 
 </div>
-<div class="container-fluid new-background">
+<div class="container-fluid ">
     <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
             <div class="center-block ">
