--- a/public/assignment/views/user/login.view.client.html
+++ b/public/assignment/views/user/login.view.client.html
@@ -1,18 +1,21 @@
-
-
-	<div class="container">
-		<div ng-show="model.error" class="alert alert-danger" role="alert">{{model.error}}</div>
-
-		<h1>Login</h1>
-		<form>
-		<div class="form-group">
-			<input type="text" class="form-control" ng-model="model.user.username" placeholder="username"/>
-			<input type="password" class="form-control" ng-model="model.user.password" placeholder="password"/>
-
-		</div>
-			<div class="form-group">
-			<a ng-click="model.login(model.user)" role="button" class="btn btn-primary form-control">Login</a>
-			<a href="#/register" role="button" class="btn btn-success form-control">Register</a>
-			</div>
-		</form>
-	</div>
+<div class="container">
+    <div ng-show="model.error" class="alert alert-danger" role="alert">
+        {{model.error}}
+    </div>
+    <h1>Login</h1>
+    <label for="username">Username</label>
+    <input type="text"
+           ng-model="model.username"
+           class="form-control"
+           id="username"
+           placeholder="username"/>
+    <label for="password">Password</label>
+    <input type="password"
+           ng-model="model.password"
+           class="form-control"
+           id="password"
+           placeholder="password"/>
+    <a ng-click="model.login(model.username, model.password)" class="btn btn-primary btn-block">Login</a>
+    <a class="btn btn-success btn-block"
+       href="#/register">Register</a>
+</div>
