--- a/public/assignment/views/user/profile.view.client.html
+++ b/public/assignment/views/user/profile.view.client.html
@@ -1,54 +1,45 @@
+<nav class="navbar navbar-dark navbar-fixed-top bg-primary">
+    <div class="container-fluid">
+        <div class="navbar-header-fixed">
+            <p class="navbar-brand profile-header boldFont">Profile</p>
+        </div>
+        <a ng-click="model.updateProfile(model.user)" class="navbar-brand bg-primary glyphicon glyphicon-ok pull-right profile-header">
+        </a>
+    </div>
+</nav>
+
 <div class="container">
-	<nav class="navbar navbar-default navbar-fixed-top">
-		<div class=" container-fluid">
-			<a class="navbar-brand">Profile</a>
-			<a class="navbar-text pull-right" href="#/user/{{model.user._id}}">
-				<span class="glyphicon glyphicon-ok white"></span>
-			</a>
-		</div>
-	</nav>
 
-	<div class="container-fluid">
-		<div ng-show="model.error" class="alert alert-danger">{{model.error}}</div>
-		<form>
+    <form>
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input ng-model="model.user.username" type="text" class="form-control" id="username" placeholder="Username">
+        </div>
+        <div class="form-group">
+            <label for="email">Email address</label>
+            <input ng-model="model.user.email" type="email" class="form-control" id="email" placeholder="alice@wonderland.com">
+        </div>
+        <div class="form-group">
+            <label for="first-name">First Name</label>
+            <input ng-model="model.user.firstName" type="text" class="form-control" id="first-name" placeholder="Alice">
+        </div>
+        <div class="form-group">
+            <label for="last-name">Last Name</label>
+            <input ng-model="model.user.lastName" type="text" class="form-control" id="last-name" placeholder="Wonderland">
+        </div>
+    </form>
 
-			<div class="form-group">
-				<label for="username">Username</label>
-				<input id="username" type="text" class="form-control" ng-model="model.user.username" placeholder="username"/>
-			</div>
-
-			<div class="form-group">
-				<label for="email">Email</label>
-				<input id="email" type="email" class="form-control" ng-model="model.user.email" placeholder="username@gmail.com"/>
-			</div>
-
-			<div class="form-group">
-				<label for="firstname">First Name</label>
-				<input id="firstname" type="text" class="form-control" ng-model="model.user.firstName" placeholder="firstname"/>
-			</div>
-
-			<div class="form-group">
-				<label for="lastname">Last Name</label>
-				<input id="lastname" type="text" class="form-control" ng-model="model.user.lastName" placeholder="lastname"/>
-			</div>
-
-			<div class="form-group">
-				<a href="#/user/{{model.user._id}}/website" role="button" class="btn btn-primary form-control">Websites</a>
-			</div>
-
-			<div class="form-group">
-				<a href="#/login" role="button" class="btn btn-danger form-control">Logout</a>
-			</div>
-
-		</form>
-	</div>
-
-
-	<nav class="navbar navbar-default navbar-fixed-bottom">
-		<div class="container-fluid">
-			<a class="navbar-text pull-right" href="#/user/{{model.user._id}}">
-				<span class="glyphicon glyphicon-user white"></span>
-			</a>
-		</div>
-	</nav>
+    <a class="btn btn-primary btn-block"
+       href="#/user/{{model.user._id}}/website">Websites</a>
+    <a class="btn btn-danger  btn-block"
+       ng-click="model.logout()">Logout</a>
+    <a class="btn btn-warning  btn-block"
+       ng-click="model.deleteUser()">Delete profile</a>
 </div>
+
+<nav class="navbar bg-primary navbar-fixed-bottom">
+    <div class="container-fluid">
+        <a class="navbar-brand bg-primary glyphicon glyphicon glyphicon-user pull-right" href="#/user/{{model.user._id}}">
+        </a>
+    </div>
+</nav>
