--- a/public/assignment/views/user/register.view.client.html
+++ b/public/assignment/views/user/register.view.client.html
@@ -1,15 +1,26 @@
+<div class="container">
+    <h1>Register</h1>
+    <div ng-show="model.error" class="alert alert-danger" role="alert">{{model.error}}</div>
 
-	<div class="container">
-		<div ng-show="model.error" class="alert alert-danger" role="alert">{{model.error}}</div>
-
-		<h1>Register</h1>
-		<form>
-
-			<input type="text" class="form-control" ng-model="model.user.username" placeholder="username"/>
-			<input type="password" class="form-control" ng-model="model.user.password" placeholder="password"/>
-			<input type="password" class="form-control" ng-model="model.user.verifypassword" placeholder="verify password"/>
-			<a ng-click="model.register(model.user)" role="button" class="btn btn-primary form-control">Register</a>
-			<a href="#/login" role="button" class="btn btn-danger form-control">Cancel</a>
-
-		</form>
-	</div>
+    <label for="username">Username</label>
+    <input type="text"
+           ng-model="username"
+           class="form-control"
+           id="username"
+           placeholder="username"/>
+    <label for="password">Password</label>
+    <input type="password"
+           ng-model="password"
+           class="form-control"
+           id="password"
+           placeholder="password"/>
+    <label for="verify-password">Verify password</label>
+    <input type="password"
+           ng-model="verifyPassword"
+           class="form-control"
+           id="verify-password"
+           placeholder="verify password"/>
+    <a ng-click="model.register(username, password, verifyPassword)" class="btn btn-primary btn-block">Register</a>
+    <a class="btn btn-danger  btn-block"
+       href="#/login">Cancel</a>
+</div>
