--- a/public/assignment/views/website/website-list.view.client.html
+++ b/public/assignment/views/website/website-list.view.client.html
@@ -1,34 +1,27 @@
-
-<div class="container">
-
-	<nav class="navbar navbar-default navbar-fixed-top">
-		<div class=" container-fluid">
-			<a href="#/user/{{model.uid}}" class="navbar-text pull-left">
-				<span class="glyphicon glyphicon-chevron-left"></span>
-			</a>
-			<a href="#/user/{{model.uid}}/website" class="navbar-brand">Websites</a>
-			<a class="navbar-text pull-right" href="#/user/{{model.uid}}/website/new">
-				<span class="glyphicon glyphicon-plus"></span>
-			</a>
+<nav class="navbar navbar-dark navbar-fixed-top bg-primary">
+	<div class="container-fluid">
+		<a class="navbar-brand bg-primary glyphicon glyphicon-chevron-left header" href="#/user/{{model.userId}}">
+		</a>
+		<div class="navbar-header-fixed">
+			<p class="navbar-brand header boldFont">Websites</p>
 		</div>
-	</nav>
+		<a class="navbar-brand bg-primary glyphicon glyphicon-plus pull-right header" href="#/user/{{model.userId}}/website/new">
+		</a>
+	</div>
+</nav>
 
-	<ul class="list-group">
-		<li ng-repeat="website in model.websites" class="list-group-item">
-			<a href="#/user/{{model.uid}}/website/{{website._id}}/page">{{website.name}}</a>
-			<a class="pull-right" href="#/user/{{model.uid}}/website/{{website._id}}">
-				<span class="glyphicon glyphicon-cog"></span>
-			</a>
-		</li>
-	</ul>
+<ul class="list-unstyled">
+	<li ng-repeat="website in model.websites" class="text-primary list-group-item borderless">
+		<a href="#/user/{{model.userId}}/website/{{website._id}}/page">{{website.name}}</a>
+		<a href="#/user/{{model.userId}}/website/{{website._id}}"><span class="glyphicon glyphicon-cog pull-right">
+		</span></a>
 
-	<nav class="nav navbar-default navbar-fixed-bottom">
-		<div class="container-fluid">
-			<a class="navbar-text pull-right" href="#/user/{{model.uid}}">
-				<span class="glyphicon glyphicon-user"></span>
-			</a>
-		</div>
-	</nav>
+	</li>
+</ul>
 
-
-</div>
+<nav class="navbar bg-primary navbar-fixed-bottom ">
+	<div class="container-fluid">
+		<a class="navbar-brand bg-primary glyphicon glyphicon glyphicon-user pull-right" href="#/user/{{model.userId}}">
+		</a>
+	</div>
+</nav>
